# rust-acl-service

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
db/migrations/: 0001_init.sql
docs/: MVP_REVIEW.md  SERVICE_DOCUMENTATION.md  SPECIFICATION.md  SPECIFICATION_V2.md
src/: app.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics.rs
tests/: integration_acl.rs
